--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Marie Sloupova Barbalat</a>
+        <a class="navbar-brand" href="/" title="Homepage">Marie Sloupova Barbalat</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +36,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About Marie Sloupova Barbalat">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="contact Marie Sloupova Barbalat">Contact me</a>
             </li>
           </ul>
         </div>
@@ -56,49 +56,49 @@
       Front-end developer, based in West Palm Beach, Florida
     </h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="/about.html#contact" class="primary-link">Contact me</a>
+      <a href="/about.html" class="secondary-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="/images/yoga.png" alt="Yoga project photo" class="img-fluid rounded d-none d-sm-block" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
-          <p class="project">
+          <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link content-button">Launch Yoga App</a>
+            <a href="#" class="primary-link project-link" title="Yoga project">Launch Yoga App</a>
           </div>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
           <h2 class="mb-3">Weather app</h2>
-          <p class="project">
+          <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link content-button"
+            <a href="#" class="primary-link project-link" title="Weather App project"
               >Launch Weather App</a
             >
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="/images/weather.png" class="img-fluid rounded d-none d-sm-block" alt="Weather app project photo" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="/images/yogurt.png" class="img-fluid rounded d-none d-sm-block" alt="Yogurt project photo" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -109,7 +109,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link content-button"
+            <a href="#" class="primary-link project-link" title="Weather project"
               >Launch Weather App</a
             >
           </div>
