--- a/index.html
+++ b/index.html
@@ -61,26 +61,26 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img src="/images/yoga.png" alt="Yoga project photo" class="img-fluid rounded d-none d-sm-block" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
-          <p>
+          <p class="project">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link project-link" title="Yoga project">Launch Yoga App</a>
+            <a href="#" class="primary-link btn-project project-link" title="Yoga project">Launch Yoga App</a>
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
-          <p>
+          <p class="project">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -92,7 +92,7 @@
             >
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <img src="/images/weather.png" class="img-fluid rounded d-none d-sm-block" alt="Weather app project photo" />
         </div>
       </div>
